# talaria

./: .actrc  .clippy.toml  .gitignore  .mailmap  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LEARNING_GUIDE.md  LICENSE  README.md  SECURITY.md
talaria-bio/: Cargo.toml  README.md
talaria-bio/benches/: alignment_bench.rs  fasta_bench.rs
talaria-bio/src/: delta_encoder.rs  lib.rs  sequence.rs  stats.rs  taxonomy.rs  taxonomy_stats.rs  uniprot.rs
talaria-bio/src/alignment/: mod.rs  nw_aligner.rs  scoring.rs
talaria-bio/src/clustering/: mod.rs  phylogenetic.rs  rules.rs
talaria-bio/src/compression/: delta.rs  mod.rs
talaria-bio/src/formats/: fasta.rs  mod.rs
talaria-bio/src/providers/: mod.rs  uniprot.rs
talaria-bio/src/sequence/: mod.rs  stats.rs  types.rs
talaria-bio/src/taxonomy/: core.rs  formatter.rs  mod.rs  prerequisites.rs  stats.rs
talaria-bio/tests/: alignment_integration.rs  fasta_integration.rs
talaria-cli/: Cargo.toml  README.md
talaria-cli/benches/: cli_benchmarks.rs
talaria-cli/src/: main.rs
talaria-cli/src/assets/: light-theme.css  report-interactive.js
talaria-cli/src/cli/: charts.rs  global_config.rs  mod.rs  output.rs  stats_display.rs  visualize.rs
talaria-cli/src/core/: alias.rs  backup_manager.rs  clustering_rules.rs  database_diff.rs  database_manager.rs  migrator.rs  mod.rs  phylogenetic_clusterer.rs  processing_traits.rs  reducer.rs  reference_selector.rs  reference_selector_optimized.rs  resolver.rs  storage_traits.rs  taxonomy_manager.rs  taxonomy_prerequisites.rs  tool_traits.rs  validator.rs  version_store.rs
talaria-cli/src/download/: mod.rs  ncbi.rs  uniprot.rs
talaria-cli/src/index/: blast.rs  generic.rs  kraken.rs  lambda.rs  mmseqs2.rs
talaria-cli/src/processing/: mod.rs  pipeline.rs  traits.rs
talaria-cli/src/report/: html.rs  impls.rs  json.rs  mod.rs  reduction_html.rs  text.rs  traits.rs
talaria-cli/src/utils/: database_ref.rs  format.rs  mod.rs  output_formatter.rs  parallel.rs  sequoia_workspace.rs  temp_workspace.rs
talaria-cli/tests/: cli_integration.rs  error_scenarios.rs  test_export_advanced.rs
talaria-cli/tests/common/: mod.rs
talaria-core/: Cargo.toml  README.md
talaria-core/src/: config.rs  error.rs  lib.rs  version.rs
talaria-core/src/audit/: layer.rs  macros.rs  mod.rs
talaria-core/src/config/: mod.rs
talaria-core/src/error/: mod.rs  verification.rs
talaria-core/src/system/: mod.rs  paths.rs  version.rs
talaria-core/src/types/: aligner.rs  chunk.rs  database.rs  format.rs  hash.rs  mod.rs  sequence.rs  stats.rs  taxonomy.rs  version.rs
talaria-core/tests/: config_integration.rs  path_integration.rs
talaria-herald/: Cargo.toml  README.md
talaria-herald/benches/: download_chunking_bench.rs  herald_benchmarks.rs  rocksdb_performance.rs
talaria-herald/src/: config.rs  lib.rs  types.rs
talaria-herald/src/chunker/: canonical_taxonomic.rs  hierarchical_taxonomic.rs  mod.rs
talaria-herald/src/cloud/: mod.rs  s3.rs  sync.rs
talaria-herald/src/database/: cache.rs  manager.rs  manager_test.rs  manager_unified_progress.rs  manager_with_monitoring.rs  mod.rs
talaria-herald/src/delta/: generator.rs  reconstructor.rs
talaria-herald/src/download/: manager.rs  mod.rs  ncbi.rs  resumable_downloader.rs  unified_progress.rs  uniprot.rs  workspace.rs
talaria-herald/src/macros/: mod.rs
talaria-herald/src/manifest/: core.rs  mod.rs  taxonomy.rs
talaria-herald/src/operations/: assembler.rs  database_diff.rs  differ.rs  migrator.rs  mod.rs  reducer.rs  reduction.rs  reference_selector.rs  reference_selector_optimized.rs  results.rs  state.rs  (+1 more)
talaria-herald/tests/: cross_database_dedup_test.rs  deadlock_regression_test.rs  download_concurrency_test.rs  download_error_scenarios.rs  download_gz_optimization_test.rs  download_manager_integration.rs  download_resume_test.rs  manifest_test.rs  mod.rs  performance_test.rs  resume_test.rs  rocksdb_large_scale_test.rs  scale_dedup_test.rs  simple_dedup_test.rs  taxonomy_query_benchmark.rs  update_test.rs  version_creation_test.rs  version_identification_test.rs  workspace_discovery_test.rs
talaria-sequoia/: Cargo.toml  README.md
talaria-sequoia/benches/: download_chunking_bench.rs  rocksdb_performance.rs  sequoia_benchmarks.rs
talaria-sequoia/src/: assembler.rs  checkpoint.rs  chunk_index.rs  compression.rs  config.rs  delta_generator.rs  delta_reconstructor.rs  differ.rs  evolution_tracker.rs  format.rs  lib.rs  manifest.rs  merkle.rs  reduction.rs  retroactive.rs  storage.rs  taxonomy_manifest.rs  temporal.rs  temporal_renderable.rs  types.rs  validator.rs  verifier.rs
talaria-sequoia/tests/: cross_database_dedup_test.rs  deadlock_regression_test.rs  download_concurrency_test.rs  download_error_scenarios.rs  download_gz_optimization_test.rs  download_manager_integration.rs  download_resume_test.rs  manifest_test.rs  mod.rs  performance_test.rs  reconstruction_test.rs  resume_test.rs  rocksdb_large_scale_test.rs  scale_dedup_test.rs  simple_dedup_test.rs  taxonomy_query_benchmark.rs  update_test.rs  version_creation_test.rs  version_identification_test.rs  workspace_discovery_test.rs
talaria-storage/: Cargo.toml  README.md
talaria-storage/benches/: storage_benchmarks.rs
talaria-storage/src/: cache.rs  compression.rs  format.rs  index.rs  lib.rs  metadata.rs  optimizer.rs  traits.rs  types.rs
talaria-storage/tests/: storage_integration.rs
talaria-test/: Cargo.toml  README.md
talaria-test/src/: assertions.rs  environment.rs  fixtures.rs  lib.rs  storage.rs
talaria-tools/: Cargo.toml  README.md
talaria-tools/benches/: tools_benchmarks.rs
talaria-tools/src/: lambda.rs  lib.rs  tool_manager.rs  traits.rs  types.rs
talaria-tools/tests/: integration_tests.rs
talaria-utils/: .rustc_info.json  Cargo.toml  README.md
talaria-utils/benches/: utils_benchmarks.rs
talaria-utils/src/: database_ref.rs  format.rs  formatter.rs  lib.rs  output.rs  parallel.rs  progress.rs  sequoia_workspace.rs  workspace.rs
talaria-utils/tests/: integration_tests.rs
(+734 files in other folders)
