[package]
name = "talaria"
version = "0.1.0"
edition = "2021"
authors = ["Brett Fowle <brett@androm.tech>", "Omar Tabbaa <omar@androm.tech>"]
description = "Intelligent FASTA reduction for aligner index optimization"
license = "MIT"
repository = "https://github.com/Andromeda-Tech/talaria"
keywords = ["bioinformatics", "fasta", "alignment", "lambda", "blast"]
categories = ["command-line-utilities", "science"]

[dependencies]
# CLI and configuration
clap = { version = "4.5.47", features = ["derive", "env", "wrap_help"] }
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# Parallel processing
rayon = "1.11.0"
crossbeam = "0.8.4"
dashmap = "6.0"
parking_lot = "0.12.4"
num_cpus = "1.17.0"

# Progress and logging
indicatif = "0.18.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
colored = "3.0.0"

# Interactive CLI
ratatui = "0.29"
crossterm = "0.29"
termimad = "0.34"
comfy-table = "7.2.1"
dialoguer = "0.12"
dirs = "5.0"

# Network and downloads
reqwest = { version = "0.12.23", features = ["blocking", "stream", "json"] }
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
sha2 = "0.10"
md5 = "0.8.0"
flate2 = "1.1.2"
tar = "0.4.44"
url = "2.5.7"

# File I/O and parsing
memmap2 = "0.9.8"
nom = "7.1"
byteorder = "1.5"
bincode = "1.3"

# Data structures
indexmap = "2.11.1"
petgraph = "0.8.2"
bit-vec = "0.8"
smallvec = "1.13"

# Error handling
anyhow = "1.0.99"
thiserror = "1.0"

# Testing and benchmarking
proptest = "1.7.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
chrono = { version = "0.4.42", features = ["serde"] }
humansize = "2.1.3"
rand = "0.8"

[dev-dependencies]
tempfile = "3.22.0"
pretty_assertions = "1.4.1"
quickcheck = "1.0.3"

[[bench]]
name = "alignment_bench"
harness = false

[[bench]]
name = "parsing_bench"
harness = false

[[bench]]
name = "reduction_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
