[workspace]
members = [
    "talaria-core",
    "talaria-bio",
    "talaria-storage",
    "talaria-sequoia",
    "talaria-tools",
    "talaria-cli",
    "talaria-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Talaria Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/talaria"

[workspace.dependencies]
# Common dependencies used across multiple crates
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
bincode = "1.3"
flate2 = "1.0"
rayon = "1.7"
dashmap = "5.5"
indicatif = "0.17"
colored = "2.0"
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
rmp-serde = "1.1"
tempfile = "3.8"
rand = "0.8"


# Optimize for binary size in release builds
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.bench]
inherits = "release"

# Development profile with better compilation times
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.test]
opt-level = 2