[package]
name = "talaria-bio"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
talaria-core = { path = "../talaria-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
noodles = { version = "0.80", features = ["fasta", "async"] }
bio = "1.3"
needletail = "0.5"
flate2 = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
regex = "1.9"
lazy_static = "1.4"
indicatif = { workspace = true }
nom = "7.1"
memmap2 = "0.9"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = "1.4"
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "fasta_bench"
harness = false

[[bench]]
name = "alignment_bench"
harness = false