[package]
name = "talaria-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "talaria"
path = "src/main.rs"

[dependencies]
talaria-core = { path = "../talaria-core", features = ["cli"] }
talaria-bio = { path = "../talaria-bio" }
talaria-storage = { path = "../talaria-storage" }
talaria-sequoia = { path = "../talaria-sequoia" }
talaria-tools = { path = "../talaria-tools" }
talaria-utils = { path = "../talaria-utils" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = { workspace = true }
colored = { workspace = true }
rayon = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
num_cpus = "1.16"
tempfile = { workspace = true }
dirs = "5.0"
humansize = "2.1"
dialoguer = "0.11"
comfy-table = "7.0"
itertools = "0.11"
terminal_size = "0.3"
textwrap = "0.16"
termimad = "0.25"
glob = "0.3"
flate2 = "1.0"
hex = "0.4"
tar = "0.4"
dashmap = "5.5"
petgraph = "0.6"
sysinfo = "0.29"
validator = "0.16"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
futures-util = "0.3"
sha2 = "0.10"
crypto-hash = "0.3"
uuid = { version = "1.5", features = ["v4", "serde"] }
regex = "1.9"
atty = "0.2"
rmp-serde = "1.1"
unicode-width = "0.1"
ratatui = "0.24"
crossterm = "0.27"
tui-textarea = "0.3"
semver = "1.0"
csv = "1.3"
toml = "0.8"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = "1.4"
serial_test = "2.0"
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.34"
criterion = "0.5"
mockall = "0.12"
proptest = "1.4"

[[bench]]
name = "cli_benchmarks"
harness = false