[package]
name = "talaria-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "talaria"
path = "src/main.rs"

[features]
default = []
flame = ["tracing-flame"]

[dependencies]
talaria-core = { path = "../talaria-core", features = ["cli"] }
talaria-bio = { path = "../talaria-bio" }
talaria-storage = { path = "../talaria-storage" }
talaria-herald = { path = "../talaria-herald" }
talaria-tools = { path = "../talaria-tools" }
talaria-utils = { path = "../talaria-utils" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-flame = { version = "0.2", optional = true }
indicatif = { workspace = true }
colored = { workspace = true }
rayon = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
rand = "0.8"
num_cpus = "1.16"
tempfile = { workspace = true }
dirs = "5.0"
humansize = "2.1"
dialoguer = "0.11"
comfy-table = "7.0"
terminal_size = "0.3"
termimad = "0.25"
flate2 = "1.0"
dashmap = "5.5"
validator = "0.20"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
futures = "0.3"
sha2 = "0.10"
regex = "1.9"
rmp-serde = "1.1"
ratatui = "0.24"
crossterm = "0.27"
toml = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = "1.4"
hostname = "0.3"
serial_test = "2.0"
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.34"
criterion = "0.5"
mockall = "0.12"
proptest = "1.4"

[[bench]]
name = "cli_benchmarks"
harness = false