[package]
name = "talaria-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = "5.0"
once_cell = "1.18"
tracing = { workspace = true }
toml = "0.8"
semver = "1.0"
indicatif = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }