[package]
name = "talaria-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = "5.0"
once_cell = "1.18"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
toml = "0.8"
semver = "1.0"
indicatif = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }
serde_bytes = "0.11"
clap = { workspace = true, optional = true }

[features]
default = []
cli = ["clap"]

[dev-dependencies]
tempfile = { workspace = true }
talaria-test = { path = "../talaria-test" }
criterion = "0.5"
proptest = "1.0"