[package]
name = "talaria-herald"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
talaria-core = { path = "../talaria-core" }
talaria-bio = { path = "../talaria-bio" }
talaria-storage = { path = "../talaria-storage" }
talaria-utils = { path = "../talaria-utils" }
talaria-tools = { path = "../talaria-tools" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
flate2 = { workspace = true }
indicatif = { workspace = true }
zstd = "0.12"
rayon = { workspace = true }
dashmap = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
petgraph = "0.6"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
crossbeam = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
regex = "1.9"
url = "2.4"
ring = "0.17"
comfy-table = "7.0"
aws-sdk-s3 = "0.33"
futures = "0.3"
futures-util = "0.3"
glob = "0.3"
walkdir = "2"
num_cpus = "1.16"
tar = "0.4"
atty = "0.2"
hostname = "0.3"
libc = "0.2"
lazy_static = "1.4"
rocksdb = { version = "0.24", default-features = false, features = ["zstd", "multi-threaded-cf"] }
toml = "0.8"
sysinfo = "0.29"
serde_bytes = "0.11"

[dev-dependencies]
talaria-test = { path = "../talaria-test" }
tempfile = { workspace = true }
wiremock = "0.5"
criterion = "0.5"
proptest = "1.3"
serial_test = "3.0"
pretty_assertions = "1.4"
mockall = "0.12"
# talaria-cli = { path = "../talaria-cli" }  # For graph centrality benchmark - commented out as it lacks lib target
petgraph = "0.6"  # For graph benchmarks

[features]
default = []
deadlock_detection = ["parking_lot/deadlock_detection"]

[[bench]]
name = "herald_benchmarks"
harness = false

[[bench]]
name = "rocksdb_performance"
harness = false