[package]
name = "talaria-sequoia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
talaria-core = { path = "../talaria-core" }
talaria-bio = { path = "../talaria-bio" }
talaria-storage = { path = "../talaria-storage" }
talaria-utils = { path = "../talaria-utils" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
flate2 = { workspace = true }
indicatif = { workspace = true }
zstd = "0.12"
hex = "0.4"
rayon = { workspace = true }
dashmap = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
petgraph = "0.6"
itertools = "0.11"
seahash = "4.1"
parking_lot = "0.12"
blake3 = "1.5"
bit-vec = "0.6"
rustc-hash = "1.1"
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
regex = "1.9"
comfy-table = "7.0"
aws-sdk-s3 = "0.33"
futures = "0.3"
glob = "0.3"
serde_bytes = "0.11"
bloom = "0.3"
walkdir = "2"

[dev-dependencies]
tempfile = { workspace = true }
criterion = "0.5"
proptest = "1.3"
pretty_assertions = "1.4"