[package]
name = "talaria-sequoia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
talaria-core = { path = "../talaria-core" }
talaria-bio = { path = "../talaria-bio" }
talaria-storage = { path = "../talaria-storage" }
talaria-utils = { path = "../talaria-utils" }
talaria-tools = { path = "../talaria-tools" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
flate2 = { workspace = true }
indicatif = { workspace = true }
zstd = "0.12"
hex = "0.4"
rayon = { workspace = true }
dashmap = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
petgraph = "0.6"
itertools = "0.11"
seahash = "4.1"
parking_lot = "0.12"
blake3 = "1.5"
bit-vec = "0.6"
rustc-hash = "1.1"
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
regex = "1.9"
comfy-table = "7.0"
aws-sdk-s3 = "0.33"
futures = "0.3"
futures-util = "0.3"
glob = "0.3"
serde_bytes = "0.11"
bloom = "0.3"
walkdir = "2"
num_cpus = "1.16"
tar = "0.4"
dialoguer = "0.11"
colored = "2.0"
atty = "0.2"

[dev-dependencies]
talaria-test = { path = "../talaria-test" }
tempfile = { workspace = true }
criterion = "0.5"
proptest = "1.3"
pretty_assertions = "1.4"
mockall = "0.12"
serial_test = "3.0"
# talaria-cli = { path = "../talaria-cli" }  # For graph centrality benchmark - commented out as it lacks lib target
petgraph = "0.6"  # For graph benchmarks

[[bench]]
name = "sequoia_benchmarks"
harness = false