[package]
name = "talaria-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
talaria-core = { path = "../talaria-core" }
talaria-bio = { path = "../talaria-bio" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
bincode = { workspace = true }
flate2 = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
bytes = "1.5"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.4"
rusqlite = { version = "0.30", features = ["bundled"] }
indexmap = "2.0"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = "1.4"