[package]
name = "talaria-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
talaria-core = { path = "../talaria-core" }
talaria-bio = { path = "../talaria-bio" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
bincode = { workspace = true }
flate2 = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
bytes = "1.5"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.4"
rusqlite = { version = "0.30", features = ["bundled"] }
indexmap = "2.0"
rocksdb = { version = "0.24", default-features = false, features = ["zstd", "multi-threaded-cf"] }
zstd = "0.12"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
num_cpus = "1.16"
sysinfo = "0.29"
rmp-serde = "1.1"
serde_bytes = "0.11"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = "1.4"
proptest = "1.4"
tokio-test = "0.4"
criterion = "0.5"
mockall = "0.12"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"

[[bench]]
name = "storage_benchmarks"
harness = false