[package]
name = "talaria-test"
version = "0.1.0"
edition = "2021"
authors = ["Brett Chaldecott <brett@aegis.bio>"]
description = "Test utilities for Talaria workspace"
license = "MIT"

[dependencies]
tempfile = "3.8"
anyhow = "1.0"
thiserror = "2.0"
once_cell = "1.19"
rand = "0.8"

# Workspace dependencies for test helpers
talaria-core = { path = "../talaria-core" }
talaria-sequoia = { path = "../talaria-sequoia" }
talaria-storage = { path = "../talaria-storage" }

# Common test dependencies
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
serial_test = "3.0"