[package]
name = "talaria-tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
talaria-core = { path = "../talaria-core" }
talaria-bio = { path = "../talaria-bio" }
talaria-utils = { path = "../talaria-utils" }
anyhow = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
flate2 = { workspace = true }
tar = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = { workspace = true }
tokio-test = "0.4"
criterion = "0.5"
mockall = "0.12"
proptest = "1.4"
serial_test = "3.0"
wiremock = "0.5"
predicates = "3.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[bench]]
name = "tools_benchmarks"
harness = false