[package]
name = "talaria-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
talaria-core = { path = "../talaria-core" }
talaria-bio = { path = "../talaria-bio" }
async-trait = "0.1"
sysinfo = "0.32"
anyhow = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
comfy-table = "7.0"
unicode-width = "0.1"
console = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.5", features = ["v4", "serde"] }
num_cpus = "1.16"
rayon = { workspace = true }
chrono = { workspace = true }
regex = "1.10"
crypto-hash = "0.3"
hex = "0.4"
flate2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = "1.4"
criterion = "0.5"
mockall = "0.12"
proptest = "1.4"
serial_test = "3.0"

[[bench]]
name = "utils_benchmarks"
harness = false